created basic UI modules

--- a/CC-Electron/index.html
+++ b/CC-Electron/index.html
@@ -3,12 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="renderer.js"></script>
     <title>CapCraft</title>
 </head>
 <body>
-    <h1>CapCraft</h1>
-    <button id="start">Start Recording</button>
-    <button id="stop">Stop Recording</button>
-    <script src="renderer.js"></script>
+    <div id="title-bar">
+        <button id="minimize">Min</button>
+        <button id="maximize-restore">Max</button>
+        <button id="close">Close</button>
+    </div>
+
+    <div id="client-area">
+        <nav id="nav">
+
+        </nav>
+
+        <div id="expanded-nav">
+
+        </div>
+
+        <div id="content">
+
+        </div>
+    </div>
 </body>
 </html>
