cleaned up html/css, modified UI

--- a/CC-Electron/index.html
+++ b/CC-Electron/index.html
@@ -27,31 +27,38 @@
     </div>
 
     <div id="client-area">
-        <nav id="nav-bar">
-            <button id="folder">
+        <div id="nav-area">
+            <nav id="nav-bar">
                 <svg>
-                    <use href="assets/folder-solid.svg#folder-solid"></use>
+                    <use href="assets/copyright-solid.svg#copyright-solid"></use>
                 </svg>
-            </button>
+                <button id="folder">
+                    <svg>
+                        <use href="assets/folder-solid.svg#folder-solid"></use>
+                    </svg>
+                    <h3>Files</h3>
+                </button>
+    
+                <button id="setting">
+                    <svg>
+                        <use href="assets/gear-solid.svg#gear-solid"></use>
+                    </svg>
+                    <h3>Settings</h3>
+                </button>
+    
+                <button id="record">
+                    <svg>
+                        <use href="assets/record-vinyl-solid.svg#record-vinyl-solid"></use>
+                    </svg>
+                    <h3>Record</h3>
+                </button>
+            </nav>
+            <div id="nav-expander">
 
-            <button id="setting">
-                <svg>
-                    <use href="assets/gear-solid.svg#gear-solid"></use>
-                </svg>
-            </button>
-
-            <button id="record">
-                <svg>
-                    <use href="assets/record-vinyl-solid.svg#record-vinyl-solid"></use>
-                </svg>
-            </button>
-        </nav>
-
-        <div id="nav-pane">
-
+            </div>
         </div>
 
-        <div id="content">
+        <div id="content-area">
 
         </div>
     </div>
