added new svgs, logo, labels, hover animations

--- a/CC-Electron/index.html
+++ b/CC-Electron/index.html
@@ -14,7 +14,7 @@
                 <use href="assets/window-minimize-solid.svg#window-minimize-solid"></use>
             </svg>
         </button>
-        <button id="maximize-restore">
+        <button id="maximize">
             <svg>
                 <use href="assets/expand-solid.svg#expand-solid"></use>
             </svg>
@@ -29,26 +29,29 @@
     <div id="client-area">
         <div id="nav-area">
             <nav id="nav-bar">
-                <svg>
-                    <use href="assets/copyright-solid.svg#copyright-solid"></use>
-                </svg>
+                <div id="logo-area">
+                    <svg>
+                        <use href="assets/capcraft-logo.svg#capcraft-logo"></use>
+                    </svg>
+                    <h2>CapCraft</h2>
+                </div>
                 <button id="folder">
                     <svg>
-                        <use href="assets/folder-solid.svg#folder-solid"></use>
+                        <use href="assets/folder.svg#folder"></use>
                     </svg>
                     <h3>Files</h3>
                 </button>
     
                 <button id="setting">
                     <svg>
-                        <use href="assets/gear-solid.svg#gear-solid"></use>
+                        <use href="assets/setting.svg#setting"></use>
                     </svg>
                     <h3>Settings</h3>
                 </button>
     
                 <button id="record">
                     <svg>
-                        <use href="assets/record-vinyl-solid.svg#record-vinyl-solid"></use>
+                        <use href="assets/record.svg#record"></use>
                     </svg>
                     <h3>Record</h3>
                 </button>
