--- a/CC-Electron/index.html
+++ b/CC-Electron/index.html
@@ -11,17 +11,17 @@
     <div id="title-bar">
         <button id="minimize">
             <svg>
-                <use href="assets/window-minimize-solid.svg#window-minimize-solid"></use>
+                <use href="assets/svg/window-minimize-solid.svg#window-minimize-solid"></use>
             </svg>
         </button>
         <button id="maximize">
             <svg>
-                <use href="assets/expand-solid.svg#expand-solid"></use>
+                <use href="assets/svg/expand-solid.svg#expand-solid"></use>
             </svg>
         </button>
         <button id="close">
             <svg>
-                <use href="assets/xmark-solid.svg#xmark-solid"></use>
+                <use href="assets/svg/xmark-solid.svg#xmark-solid"></use>
             </svg>
         </button>
     </div>
@@ -29,40 +29,67 @@
     <div id="client-area">
         <div id="nav-area">
             <nav id="nav-bar">
-                <div id="logo-area">
+                <div id="logo">
                     <svg>
-                        <use href="assets/capcraft-logo.svg#capcraft-logo"></use>
+                        <use href="assets/svg/capcraft-logo.svg#capcraft-logo"></use>
                     </svg>
-                    <h2>CapCraft</h2>
+                    <h1>CapCraft</h1>
                 </div>
+
+                <hr>
+
                 <button id="folder">
                     <svg>
-                        <use href="assets/folder.svg#folder"></use>
+                        <use href="assets/svg/folder.svg#folder"></use>
                     </svg>
-                    <h3>Files</h3>
+                    <h2>Files</h2>
                 </button>
     
-                <button id="setting">
+                <button id="settings">
                     <svg>
-                        <use href="assets/setting.svg#setting"></use>
+                        <use href="assets/svg/settings.svg#settings"></use>
                     </svg>
-                    <h3>Settings</h3>
+                    <h2>Settings</h2>
                 </button>
     
                 <button id="record">
                     <svg>
-                        <use href="assets/record.svg#record"></use>
+                        <use href="assets/svg/record.svg#record"></use>
                     </svg>
-                    <h3>Record</h3>
+                    <h2>Record</h2>
                 </button>
             </nav>
             <div id="nav-expander">
-
+                <svg>
+                    <use href="assets/svg/arrow-forward-ios.svg#arrow-forward-ios"></use>
+                </svg>
             </div>
         </div>
 
         <div id="content-area">
+            <div id="settings-menu">
+                <h2>Settings</h2>
 
+                <div id="files-settings">
+                    <h3>Files</h3>
+
+                    <div id="video-save-location">
+                        <h4>Video Save Location</h4>
+                        <div>
+                            <svg>
+                                <use href="assets/svg/folder-open-solid.svg#folder-open-solid"></use>
+                            </svg>
+                            <input type="text">
+                        </div>
+                        <p>Your videos will be saved in this location.</p>
+                    </div>
+
+                    <!-- <div id="storage-limit">
+                        <h4>Storage Limit</h4>
+                        <p>After storage limit is exceeded, the oldest videos will be deleted automatically.</p>
+                    </div> -->
+                </div>
+            </div>
         </div>
     </div>
 </body>
