--- a/CC-Electron/index.html
+++ b/CC-Electron/index.html
@@ -42,21 +42,21 @@
                     <svg>
                         <use href="assets/svg/folder.svg#folder"></use>
                     </svg>
-                    <h2>Files</h2>
+                    <span>Files</span>
                 </button>
     
                 <button id="settings">
                     <svg>
                         <use href="assets/svg/settings.svg#settings"></use>
                     </svg>
-                    <h2>Settings</h2>
+                    <span>Settings</span>
                 </button>
     
                 <button id="record">
                     <svg>
                         <use href="assets/svg/record.svg#record"></use>
                     </svg>
-                    <h2>Record</h2>
+                    <span>Record</span>
                 </button>
             </nav>
             <div id="nav-expander">
@@ -70,10 +70,14 @@
             <div id="settings-menu">
                 <h2>Settings</h2>
 
-                <div id="files-settings">
+                <hr>
+
+                <div id="files-settings-list">
                     <h3>Files</h3>
 
-                    <div id="video-save-location">
+                    <!-- <hr> -->
+
+                    <div id="save">
                         <h4>Video Save Location</h4>
                         <div>
                             <svg>
@@ -84,10 +88,122 @@
                         <p>Your videos will be saved in this location.</p>
                     </div>
 
-                    <!-- <div id="storage-limit">
+                    <div id="storage">
                         <h4>Storage Limit</h4>
-                        <p>After storage limit is exceeded, the oldest videos will be deleted automatically.</p>
-                    </div> -->
+                        <div>
+                            <svg>
+                                <use href="assets/svg/storage.svg#storage"></use>
+                            </svg>
+                            <select>
+                                <option>5 GB</option>
+                                <option>10 GB</option>
+                                <option>20 GB</option>
+                                <option>50 GB</option>
+                                <option>100 GB</option>
+                                <option>200 GB</option>
+                                <option>500 GB</option>
+                                <option>No Limit</option>
+                              </select>
+                        </div>
+
+                        <p>When storage limit is exceeded, the oldest videos will be deleted automatically.</p>
+                    </div>
+
+                    <div id="extension">
+                        <h4>File Extension</h4>
+                        <div>
+                            <svg>
+                                <use href="assets/svg/draft.svg#draft"></use>
+                            </svg>
+                            <select>
+                                <option>.mp4</option>
+                                <option>.mkv</option>
+                                <option>.avi</option>
+                              </select>
+                        </div>
+
+                        <p>Your videos will be saved with this extension.</p>
+                    </div>
+
+                    <div id="encoder">
+                        <h4>Encoder</h4>
+                        <div>
+                            <svg>
+                                <use href="assets/svg/compress.svg#compress"></use>
+                            </svg>
+                            <select>
+                                <option>nvenc</option>
+                                <option>jim_nvenc</option>
+                                <option>h.264</option>
+                              </select>
+                        </div>
+
+                        <p>Something something CPU vs GPU...</p>
+                    </div>
+                </div>
+
+                <div id="video-settings-list">
+                    <h3>Video</h3>
+
+                    <!-- <hr> -->
+
+                    <div>
+                        <div id="res-width">
+                            <h4>Width</h4>
+                            <div>
+                                <svg>
+                                    <use href="assets/svg/width.svg#width"></use>
+                                </svg>
+                                <input type="text">
+                            </div>
+                        </div>   
+                        <div id="res-height">
+                            <h4>Height</h4>
+                            <div>
+                                <svg>
+                                    <use href="assets/svg/height.svg#height"></use>
+                                </svg>
+                                <input type="text">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div id="framerate">
+                            <h4>Framerate</h4>
+                            <div>
+                                <svg>
+                                    <use href="assets/svg/autofps-select.svg#autofps-select"></use>
+                                </svg>
+                                <select>
+                                    <option>10 fps</option>
+                                    <option>20 fps</option>
+                                    <option>24 fps</option>
+                                    <option>30 fps</option>
+                                    <option>48 fps</option>
+                                    <option>60 fps</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div id="bitrate">
+                            <h4>Bitrate</h4>
+                            <div>
+                                <svg>
+                                    <use href="assets/svg/bar-chart-4-bars.svg#bar-chart-4-bars"></use>
+                                </svg>
+                                <select>
+                                    <option>3 Mbps</option>
+                                    <option>5 Mbps</option>
+                                    <option>10 Mbps</option>
+                                    <option>15 Mbps</option>
+                                    <option>20 Mbps</option>
+                                    <option>30 Mbps</option>
+                                    <option>50 Mbps</option>
+                                    <option>100 Mbps</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
