--- a/CC-Electron/index.html
+++ b/CC-Electron/index.html
@@ -74,10 +74,10 @@
 
                 <div id="video-container">
                     <video>
-                        <source src="assets/example-video.mp4" type="video/mp4">
+                        <source src="assets/example-video-2.mp4" type="video/mp4">
                     </video>
                     <div id="playback-controller">
-                        <input type="range" min="0" max="100" value="0" step="0.1">
+                        <input id="playback-slider" type="range" min="0" max="100" value="0" step="0.01">
                         <div>
                             <button id="play-pause">
                                 <svg>
@@ -87,15 +87,24 @@
 
                             <button id="volume">
                                 <svg>
-                                    <use href="assets/svg/volume-mute.svg#volume-mute"></use>
+                                    <use href="assets/svg/volume-down.svg#volume-down"></use>
                                 </svg>
                             </button>
-                            <span>
-                                88:88/88:88
-                            </span>
+
+                            <input id="volume-slider" type="range" min="0" max="1" value="0" step="0.01">
+
+                            <div id="time">
+                                <span>88:88</span>
+                                <span>/88:88</span>
+                            </div>
+
+                            <input id="speed-slider" type="range" min="-2" max="4" value="1" step="1">
+
                             <button id="speed">
-                                <span>1X</span>
+                                <span>1</span>
+                                <span>X</span>
                             </button>
+                            
                             <button id="fullscreen">
                                 <svg>
                                     <use href="assets/svg/fullscreen.svg#fullscreen"></use>
