changed timeline and playback slider to be more responsive to input

--- a/CC-Electron/index.html
+++ b/CC-Electron/index.html
@@ -125,13 +125,26 @@
                     </div>
 
                     <div id="timeline-container">
-                        <svg id="timeline" viewBox="0 0 1200 60"></svg>
-                        <svg id="scrubber" viewbox="0 0 12 84">
+                        <svg id="timeline-marker" viewBox="0 0 1200 60"></svg>
+                        <input id="timeline-slider" type="range" min="0" max="100" value="0" step="0.01">
+
+                                                <!-- <svg id="scrubber" viewbox="0 0 12 84">
+                            <polygon points="0,0 6,10 12,0" />
+                            <line x1="6" y1="4" x2="6" y2="80" />
+                        </svg>
+                        <svg id="start-clip" viewbox="0 0 12 84">
                             <polygon points="0,0 6,10 12,0" />
                             <line x1="6" y1="4" x2="6" y2="80" />
                             <polygon points="0,84 6,74 12,84" />
                         </svg>
+                        <svg id="end-clip" viewbox="0 0 12 84">
+                            <polygon points="0,0 6,10 12,0" />
+                            <line x1="6" y1="4" x2="6" y2="80" />
+                            <polygon points="0,84 6,74 12,84" />
+                        </svg> -->
                     </div>
+
+                    <!-- <button id="clip">clip!</button> -->
                 </div>
             </div>
 
