improved naming clarity, function decomposition

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -88,13 +88,13 @@
                         <hr>
 
                         <div class="directory-ctr">
-                            <button id="btn-captures-directory-left" class="directory-btn" >
+                            <button id="btn-captures-left" class="directory-btn" >
                                 <svg>
                                     <use href="../assets/svg/arrow-back-ios.svg#arrow-back-ios"></use>
                                 </svg>
                             </button>
 
-                            <div id="gallery-captures-directory" class="directory-gallery">
+                            <div id="gallery-captures" class="directory-gallery">
                                 <template>
                                     <div class="video-preview-ctr" data-src="">
                                         <img class="video-thumbnail" src="" alt="">
@@ -117,7 +117,7 @@
                                 </template>
                             </div>
 
-                            <button id="btn-captures-directory-right" class="directory-btn">
+                            <button id="btn-captures-right" class="directory-btn">
                                 <svg>
                                     <use href="../assets/svg/arrow-forward-ios.svg#arrow-forward-ios"></use>
                                 </svg>
@@ -125,22 +125,22 @@
                         </div>
                     </div>
 
-                    <div id="ctr3-clips-carousel" class="content-ctr3">
+                    <div id="ctr3-clips-directory" class="content-ctr3">
                         <h3>Clips</h3>
 
                         <hr>
 
                         <div class="directory-ctr">
-                            <button id="btn-clips-directory-left" class="directory-btn" >
+                            <button id="btn-clips-left" class="directory-btn" >
                                 <svg>
                                     <use href="../assets/svg/arrow-back-ios.svg#arrow-back-ios"></use>
                                 </svg>
                             </button>
 
-                            <div id="gallery-clips-directory" class="directory-gallery">                                
+                            <div id="gallery-clips" class="directory-gallery">                                
                             </div>
 
-                            <button id="btn-captures-directory-right" class="directory-btn">
+                            <button id="btn-captures-right" class="directory-btn">
                                 <svg>
                                     <use href="../assets/svg/arrow-forward-ios.svg#arrow-forward-ios"></use>
                                 </svg>
